--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,6 +57,7 @@ jobs:
           # FILTER_REGEX_INCLUDE: .*test/.*, .*old/.*, .*reports/.*
           FILTER_REGEX_EXCLUDE: (./py_src/vue_principale.py|.vscode/*)
           VALIDATE_JSCPD: false
+          VALIDATE_CPP: false
           # VALIDATE_JSON: true
           # VALIDATE_PYTHON: true
           VALIDATE_PYTHON_BLACK: false
